fixed spacing

--- a/landing.css
+++ b/landing.css
@@ -7,6 +7,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 html {
@@ -85,16 +86,23 @@ a:any-link {
     font-family: "Poppins", sans-serif;
 }
 
+.nav-link a:hover {
+    color: #5370afad;
+    cursor: pointer;
+    background-color: transparent;
+}
+
 .hero {
     gap: 1rem;
     align-items: center;
     padding-bottom: 15px;
     justify-content: space-around;
-    padding-top: 6rem;
+    
 }
 
 .hero-text h1 {
-    margin-block: 7px;
+    margin-top: -30px;
+    margin-bottom: 15px;
 }
 
 .hero-text p {
@@ -123,7 +131,7 @@ a:any-link {
     
     #header-img {
         max-width: 100%;
-        height: 3rem;
+        height: 4rem;
         padding: 0;
         padding-inline: 1rem;
         padding-bottom: 1rem;
